# QA-Python

./: README.md
Homework-week1/: README.md
Homework-week2/: README.md
Homework-week3/: README.md
Homework-week4/: README.md
Homework-week5/: README.md
Homework-week6/: README.md
backup/device-api-e2e/: .flake8  .gitlab-ci.yml  Dockerfile  config.py  pyproject.toml
device-api-e2e/: requirements.txt
device-api-e2e/data/: device.py
device-api-e2e/framework/: constants.py
device-api-e2e/tests/: conftest.py  test_device_rest.py
homework/: README.md
homework/01-docker/: README.md
homework/02-http_grpc_sql/: README.md
lesson-5-1/: .gitlab-ci.yml  main.py
lesson-5-2/: README.md  demo.py  pyproject.toml
lesson-5-2/flake8route/: flake8route.py
lesson-5-2/tests/: test_linter.py
lesson-kafka/: README.md  docker-compose.yml  pyproject.toml  test_kafka.py
lesson-kafka/kafka/: __init__.py  consumer.py  consumers.py  producer.py
lesson-kafka/kafka/models/: order_events.py
route256_plugin/: README.md  setup.py
route256_plugin/route256_plugin/: api.py  fixtures.py
workshop-5-3/: .gitlab-ci.yml  Dockerfile  conftest.py  pytest.ini
workshop-5-3-test/: .gitlab-ci.yml  Dockerfile  test_redirect.py  test_status.py
workshop-5-3/.gitlab-ci.d/: docker.yml
workshop-6-performance-testing/: Homework.md  README.md  Yandex-tank-dashboard.json  Напомниалка YT.md
workshop-week2/: README.md  dec_params.py  decorator.py  iter_.py  main.py  manager_context.py  namedtuple_dataclass.py  oop.py
yandex-tank/: README.md  setup.py
(+25 files in other folders)
