[tool.poetry]
name = "flake8route"
version = "0.1.0"
description = ""
authors = ["aevtikheev <aevtikheev@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
flake8-plugin-utils = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
FR = "flake8route.flake8route:Flake8RoutePlugin"
