[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["avorobey <avorobey@ozon.ru>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.0.2"
pytest = "^7.2.2"
dacite = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
